k8s/api-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: instagramapi
    namespace: cloud-native-dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: instagramapi
    spec:
      containers:
      - name: instagramapi
        image: domanh114/instagram-api:latest
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: instagramapi
---
apiVersion: v1
kind: Service
metadata:
  name: instagramapi-svc
  namespace: cloud-native-dev
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32001
  selector:
    app: instagramapi
