k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: instagramclone-ingress
  namespace: cloud-native-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  # API: truy cập qua http://instagram-api.local
  - host: instagram-api.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: instagramapi-svc
            port:
              number: 80
  # Seq UI: truy cập qua http://instagram-seq.local
  - host: instagram-seq.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: instagramseq
            port:
              number: 80
